static/css/styles.css
/* ... */
/*-----------------------------------------------------------------------------------*/
  
/*************/
/*** Links ***/
/*************/

/* All links - add underline on hover
   Links in text: 
     Do not differentiate between internal and external links on styling */

a {
  text-decoration: none;
  color: blue;
}

a:hover {
  text-decoration: underline;
  text-underline-offset: 3.2px;
  color: darkblue;
}

.dropdown-item.hover, .dropdown-item:active {
  color: white;
  text-decoration: none;
  background-color: var(--light_grey);
}

/* Links not in text 
      Differentiate between internal and external links by using diffrent bootstrap icons: 
        Internal - bi-arrow-right-square
        External - bi-box-arrow-up-right; add 'target="_blank"' so that they open up in new tabs

      Use link-teal for standalone links on white background. 
      Use link-black for standalone links on colored background. */

.link-teal {
  color: var(--teal1);
}
.link-teal:hover {
  color: var(--teal1);
  text-decoration: underline; 
}
.link-black {
  color: black;
}
.link-black:hover {
  color: black;
  text-decoration: underline; 
}

/* Nav links */
.navbar-light .navbar-nav .nav-link:hover {
  color: var(--dark_grey);
  text-decoration: none;
}
.navbar-light .navbar-nav .nav-link:hover,
.navbar-light .navbar-nav .nav-link:focus,
.navbar-light .navbar-nav .nav-link:active {
  text-decoration: none;
}

/* Use only for table of content and listing resources in end of phase and topic pages */
.list-link a {
  color: var(--teal1);
}

/* Styling of the 'site map', telling the visitor on which page they are in relation to homepage */
.breadcrumb-item a {
  color: var(--teal1);
}
.breadcrumb-item.active {
  color: black;
}

/* Header links on homepage */
h1 a {
  color: var(--aqua1);
}
h1 a:hover {
  color: var(--teal1);
}

/* Homepage right side card links */
.card-body-style {
  color: black;
  text-decoration: none;
}

.card-body-style:hover {
  color: black;
  text-decoration: none;
}

/* Topic links */
.cont-links a {
  color: var(--teal1);
  font-weight: bold;
}
.cont-links a:hover,
.cont-links a:focus,
.cont-links a:active {
  color: var(--teal1);
  text-decoration: underline;
}

/* Footer */
.footer-link {
  color: var(--teal1);
  font-weight: bold;
}
.footer-link:hover {
  color: var(--teal1);
}
/*-----------------------------------------------------------------------------------*/

/*************************************/
/*** Top of pages / header styling ***/
/*************************************/

.header {
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  padding: 1.5rem 0;
  color: white;
  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px,
    rgba(17, 17, 26, 0.05) 0px 8px 32px;
}

@media all and (min-width: 992px) {
  .mobile-navbar {
    display: none;
  }
}

@supports ((position: -webkit-sticky) or (position: sticky)) {
  .sticky-top {
    position: -webkit-sticky;
    position: sticky;
    top: 0px;
    z-index: 1020;
  }
  .sticky-top2 {
    position: -webkit-sticky;
    position: sticky;
    top: 7rem;
    z-index: 1020;
  }
  .sticky-top3 {
    position: -webkit-sticky;
    position: sticky;
    top: 9rem;
    z-index:0;
  }
}
html {
  scroll-padding-top: 11rem; /* height of sticky header */
}

/* Headers on resources page */
.resources-header-training {
  color: var(--grape1);
  font-size: 1.17rem;
  font-weight: bold;
  margin-top: 1.33rem;
  margin-bottom: 1.33rem;
  text-decoration: none;
}

.resources-header-training:hover {
  color: var(--grape1);
}
.resources-header-guidance {
  color: var(--teal1);
  font-size: 1.17rem;
  font-weight: bold;
  margin-top: 1.33rem;
  margin-bottom: 1.33rem;
  text-decoration: none;
}

.resources-header-guidance:hover {
  color: var(--teal1);
}
.resources-header-tool {
  color: var(--aqua1);
  font-size: 1.17rem;
  font-weight: bold;
  margin-top: 1.33rem;
  margin-bottom: 1.33rem;
  text-decoration: none;
}

.resources-header-tool:hover {
  color: var(--aqua1);
}

/* Data type guide header styling */
/* The colored header strip */
.resources-data-header-strip {
    margin: -1rem -1rem 1rem -1rem; /* Offsets the p-3 padding of the parent */
    padding: 0.5rem 1rem;
    color: white;
    font-weight: bold;
    font-size: 1.17rem;
    letter-spacing: 0.05em;
}

/* Background Colors for Headers */
.bg-repository { background-color: #491F53; }
.bg-metadata { background-color: #045C64; }
.bg-fileformat { background-color: #4C979F; }

/* Title Colors matching the types */
.text-repository { color: #491F53 !important; font-weight: 700; }
.text-metadata { color: #045C64 !important; font-weight: 700; }
.text-fileformat { color: #4C979F !important; font-weight: 700; }

/* Ensure the title link doesn't lose color on hover */
.resources-data-header.text-repository:hover,
.resources-data-header.text-metadata:hover,
.resources-data-header.text-fileformat:hover {
    filter: brightness(1.2);
    text-decoration: underline;
}

.resources-data-header {
  font-size: 1.17rem;
  font-weight: bold;
  margin-top: 0.5rem;
  margin-bottom: 1.33rem;
  text-decoration: none;
}

/* Get support, About, Contact */
.navbar-nav.navbar-top li:not(:first-child) a {
  padding-left: 0.6rem;
}
.navbar-nav.navbar-top li:not(:last-child) a span {
  border-right: 1px solid #ccc;
  padding-right: 0.6rem;
}

/* Main menu */
.navbar-light .navbar-nav .nav-main-menu {
  color: var(--teal1);
}

.navbar-light .navbar-nav .nav-main-menu:hover,
.navbar-light .navbar-nav .nav-main-menu:focus,
.navbar-light .navbar-nav .nav-main-menu:active {
  color: var(--teal1);
  font-weight: bold;
  text-decoration: none;
}

/*-----------------------------------------------------------------------------------*/

/* Clear floats after the columns */ /* not used? */
.row:after {
  content: "";
  display: table;
  clear: both;
}
/* ... */

